refactor: imported BookQueryName enum